unpackaged/main/default/objects/Order/fields/Actual_Bag_Size_Qty__c.field-meta.xml
<CustomField>
    <fullName>Actual_Bag_Size_Qty__c</fullName>
    <label>Actual Bag Size &amp; Qty</label>
    <length>30</length>
    <type>Text</type>
</CustomField>