unpackaged/main/default/objects/Order/fields/Agent_Discount__c.field-meta.xml
<CustomField>
    <fullName>Agent_Discount__c</fullName>
    <label>Agent Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>