unpackaged/main/default/objects/Order/fields/Agent_Perc_Discount__c.field-meta.xml
<CustomField>
    <fullName>Agent_Perc_Discount__c</fullName>
    <label>Agent % Discount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>