unpackaged/main/default/objects/Order/fields/Bag_instructions__c.field-meta.xml
<CustomField>
    <fullName>Bag_instructions__c</fullName>
    <label>Bag instructions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reset</fullName>
            </value>
            <value>
                <fullName>Roll</fullName>
            </value>
            <value>
                <fullName>Take</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>