unpackaged/main/default/objects/Order/fields/Bags__c.field-meta.xml
<CustomField>
    <fullName>Bags__c</fullName>
    <label>Bags</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>Disposal</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>