unpackaged/main/default/objects/Order/fields/Confirmation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>checked automatically when email is sent to customer</inlineHelpText>
    <label>Confirmation Email Sent</label>
    <type>Checkbox</type>
</CustomField>