unpackaged/main/default/objects/Order/fields/Coupon_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Coupon Discount Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>