unpackaged/main/default/objects/Order/fields/Date_2__c.field-meta.xml
<CustomField>
    <fullName>Date_2__c</fullName>
    <formula>EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date 2</label>
    <type>Date</type>
</CustomField>