unpackaged/main/default/objects/Order/fields/Disposal_Address__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Address__c</fullName>
    <label>Disposal Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>