unpackaged/main/default/objects/Order/fields/Disposal_City__c.field-meta.xml
<CustomField>
    <fullName>Disposal_City__c</fullName>
    <label>Disposal City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>