unpackaged/main/default/objects/Order/fields/Disposal_County__c.field-meta.xml
<CustomField>
    <fullName>Disposal_County__c</fullName>
    <label>Disposal County</label>
    <length>25</length>
    <type>Text</type>
</CustomField>