unpackaged/main/default/objects/Order/fields/Disposal_State__c.field-meta.xml
<CustomField>
    <fullName>Disposal_State__c</fullName>
    <label>Disposal State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>