unpackaged/main/default/objects/Order/fields/Disposal_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Zip_Code__c</fullName>
    <label>Disposal Zip Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>