unpackaged/main/default/objects/Order/fields/DisposalLatitude__c.field-meta.xml
<CustomField>
    <fullName>DisposalLatitude__c</fullName>
    <formula>ShippingLatitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>