unpackaged/main/default/objects/Order/fields/Driver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Driver_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Driver Contact)</relationshipLabel>
    <relationshipName>Driver_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>