unpackaged/main/default/objects/Order/fields/Driver_Pickup_Comments__c.field-meta.xml
<CustomField>
    <fullName>Driver_Pickup_Comments__c</fullName>
    <label>Driver Pickup Comments</label>
    <type>TextArea</type>
</CustomField>