unpackaged/main/default/objects/Order/fields/Most_Recent_Order__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Order__c</fullName>
    <label>Most Recent Order</label>
    <summarizedField>OrderItem.CreatedDate</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>