unpackaged/main/default/objects/Order/fields/Order_Products__c.field-meta.xml
<CustomField>
    <fullName>Order_Products__c</fullName>
    <label>Order Products</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>