unpackaged/main/default/objects/Order/fields/Order_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Order_Sales_Tax__c</fullName>
    <label>Order Sales Tax</label>
    <summarizedField>OrderItem.Sales_Tax_Amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>