unpackaged/main/default/objects/Order/fields/Originated_by__c.field-meta.xml
<CustomField>
    <fullName>Originated_by__c</fullName>
    <label>Originated by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>