unpackaged/main/default/objects/Order/fields/Other_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Other_Instructions__c</fullName>
    <label>Other Instructions (from Customer)</label>
    <type>TextArea</type>
</CustomField>