unpackaged/main/default/objects/Order/fields/Preferred_Pick_Up_TIme__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pick_Up_TIme__c</fullName>
    <label>Preferred Pick Up TIme</label>
    <type>DateTime</type>
</CustomField>