unpackaged/main/default/objects/Order/fields/Quantity_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Discount_Amount__c</fullName>
    <label>Quantity Discount Amount</label>
    <summarizedField>OrderItem.Quantity_Discount_Amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>