unpackaged/main/default/objects/Order/fields/Reconciledorder__c.field-meta.xml
<CustomField>
    <fullName>Reconciledorder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconciled</label>
    <type>Checkbox</type>
</CustomField>