unpackaged/main/default/objects/Order/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>