unpackaged/main/default/objects/Order/fields/refund_credit_exp__c.field-meta.xml
<CustomField>
    <fullName>refund_credit_exp__c</fullName>
    <label>Refund CC exp</label>
    <length>10</length>
    <type>Text</type>
</CustomField>