unpackaged/main/default/objects/Order/fields/refund_credit_last__c.field-meta.xml
<CustomField>
    <fullName>refund_credit_last__c</fullName>
    <label>Refund last 4 digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>