unpackaged/main/default/objects/Order/fields/Refund_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Refund_Transaction_ID__c</fullName>
    <label>Refund Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>