unpackaged/main/default/objects/Order/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <label>Scheduled Service Date</label>
    <type>Date</type>
</CustomField>