unpackaged/main/default/objects/Order/fields/Service_Date_Gap__c.field-meta.xml
<CustomField>
    <fullName>Service_Date_Gap__c</fullName>
    <formula>Service_Status_Date_Time__c  -  ActivatedDate</formula>
    <label>Service Date Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>