unpackaged/main/default/objects/Order/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <label>Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Serviced</fullName>
            </value>
            <value>
                <fullName>Service hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>