unpackaged/main/default/objects/Order/fields/Service_Status_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Status_Date_Time__c</fullName>
    <description>Capture Service Status change timestamp</description>
    <label>Service Status Date-Time</label>
    <type>DateTime</type>
</CustomField>