unpackaged/main/default/objects/Order/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <type>TextArea</type>
</CustomField>