unpackaged/main/default/objects/Order/fields/Terms_Limit__c.field-meta.xml
<CustomField>
    <fullName>Terms_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Terms Limit</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>