unpackaged/main/default/objects/Order/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>