unpackaged/main/default/objects/Order/fields/Time_In__c.field-meta.xml
<CustomField>
    <fullName>Time_In__c</fullName>
    <label>Time In</label>
    <type>Time</type>
</CustomField>