unpackaged/main/default/objects/Order/fields/Total_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Amount__c</fullName>
    <label>Total Gross Amount</label>
    <summarizedField>OrderItem.Total_Amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>