unpackaged/main/default/objects/Order/fields/Total_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Amount__c</fullName>
    <formula>Total_Gross_Amount__c - 
IF(AND(NOT(ISBLANK(Agent_Discount__c)), Agent_Discount__c &gt; 0), Agent_Discount__c, 0) -
IF(AND(NOT(ISBLANK(Agent_Perc_Discount__c)), Agent_Perc_Discount__c &lt;&gt; 0), Total_Gross_Amount__c * Agent_Perc_Discount__c, 0) - 
IF(AND(NOT(ISBLANK(Coupon_Discount_Amount__c)), Coupon_Discount_Amount__c &gt; 0), Coupon_Discount_Amount__c, 0)</formula>
    <label>Total Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>