unpackaged/main/default/objects/Order/fields/Transaction_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Error_Description__c</fullName>
    <label>Transaction Error Description</label>
    <type>TextArea</type>
</CustomField>