unpackaged/main/default/objects/Order/fields/Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>