unpackaged/main/default/objects/Order/recordTypes/Buy_a_Bag.recordType-meta.xml
<RecordType>
    <fullName>Buy_a_Bag</fullName>
    <active>true</active>
    <description>Use this record type when a client buys a bag</description>
    <label>Buy a bag</label>
</RecordType>