unpackaged/main/default/objects/Order/recordTypes/Disposal.recordType-meta.xml
<RecordType>
    <fullName>Disposal</fullName>
    <active>true</active>
    <description>Use this record to schedule a Disposal for client</description>
    <label>Disposal</label>
</RecordType>