unpackaged/main/default/objects/Order/validationRules/Both_Fields_cannot_have_value1.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_Fields_cannot_have_value1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISBLANK (Agent_USD_Discount__c )), 
NOT(ISBLANK (Agent_Perc_Discount__c )) 
)</errorConditionFormula>
    <errorMessage>Two fields cannot have value</errorMessage>
</ValidationRule>