unpackaged/main/default/objects/Order/validationRules/Only_Admin_can_change_the_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admin_can_change_the_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISPICKVAL( $User.Can_Edit_Orders__c , &quot;Yes&quot;)))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Only System administrator can change the status</errorMessage>
</ValidationRule>