unpackaged/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.ACTIVATED_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>Order_Products__c</columns>
    <columns>Service_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Buy_a_Bag,Order.Disposal</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Activated,Paid by Terms,Invoiced</value>
    </filters>
    <filters>
        <field>SALES.ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>paul davis</value>
    </filters>
    <label>All Orders</label>
</ListView>