unpackaged/main/default/objects/Order/listViews/Buy_A_Bag.listView-meta.xml
<ListView>
    <fullName>Buy_A_Bag</fullName>
    <columns>ORDERS.ACTIVATED_DATE</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Service_Status__c</columns>
    <columns>Total_Order_Amount__c</columns>
    <columns>ORDER.SHIPPING_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
        <value>Buy a Bag</value>
    </filters>
    <label>Buy A Bag</label>
</ListView>