unpackaged/main/default/objects/Order/listViews/Daily_Orders.listView-meta.xml
<ListView>
    <fullName>Daily_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDER.SHIPPING_STREET</columns>
    <columns>ORDER.SHIPPING_CITY</columns>
    <columns>ORDER.SHIPPING_STATE</columns>
    <columns>ORDER.SHIPPING_ZIP</columns>
    <columns>Disposal_Address__c</columns>
    <columns>Disposal_City__c</columns>
    <columns>Disposal_County__c</columns>
    <columns>Disposal_State__c</columns>
    <columns>Disposal_Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Daily Orders</label>
</ListView>