unpackaged/main/default/objects/Order/listViews/Disposals_Activated_PBT_Invoiced.listView-meta.xml
<ListView>
    <fullName>Disposals_Activated_PBT_Invoiced</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Service_Status__c</columns>
    <columns>Total_Order_Amount__c</columns>
    <columns>Disposal_Address__c</columns>
    <columns>Disposal_City__c</columns>
    <columns>ORDERS.ACTIVATED_DATE</columns>
    <columns>Disposal_State__c</columns>
    <columns>Vehicle_Name__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Other_Instructions__c</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Disposal</value>
    </filters>
    <label>Orders</label>
</ListView>