unpackaged/main/default/objects/Order/listViews/Driver_Log_all.listView-meta.xml
<ListView>
    <fullName>Driver_Log_all</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Phone__c</columns>
    <columns>Disposal_Address__c</columns>
    <columns>Disposal_City__c</columns>
    <columns>Disposal_County__c</columns>
    <columns>Disposal_State__c</columns>
    <columns>Disposal_Zip_Code__c</columns>
    <columns>Other_Instructions__c</columns>
    <columns>Special_Instructions__c</columns>
    <columns>Preferred_Pick_Up_TIme__c</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>Driver Log All</label>
</ListView>