unpackaged/main/default/objects/Order/listViews/Orders_201712.listView-meta.xml
<ListView>
    <fullName>Orders_201712</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Vehicle_Name__c</columns>
    <columns>Service_Date__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.EFFECTIVE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>12/1/2017</value>
    </filters>
    <filters>
        <field>ORDERS.EFFECTIVE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2017</value>
    </filters>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
        <value>Bag Disposal</value>
    </filters>
    <label>Orders 2017 12 Disp</label>
</ListView>