unpackaged/main/default/objects/Order/listViews/Route_Houston.listView-meta.xml
<ListView>
    <fullName>Route_Houston</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Name__c</field>
        <operation>equals</operation>
        <value>Route Houston</value>
    </filters>
    <label>Route Houston</label>
</ListView>