unpackaged/main/default/objects/Order/listViews/Route_NorthEast.listView-meta.xml
<ListView>
    <fullName>Route_NorthEast</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Phone__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Disposal_Address__c</columns>
    <columns>Disposal_City__c</columns>
    <columns>Disposal_State__c</columns>
    <columns>Disposal_Zip_Code__c</columns>
    <columns>Special_Instructions__c</columns>
    <columns>Other_Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Name__c</field>
        <operation>equals</operation>
        <value>Route NorthEast</value>
    </filters>
    <label>Route NorthEast</label>
</ListView>