unpackaged/main/default/objects/Order/listViews/Route_South_Florida.listView-meta.xml
<ListView>
    <fullName>Route_South_Florida</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle_Name__c</field>
        <operation>equals</operation>
        <value>Route South Florida</value>
    </filters>
    <label>Route South Florida</label>
</ListView>